Adds h1 contacts to html
Adds feature test for the content 'Contact' in html and
async pageHasTextContent method to world.js.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <h1>Contacts</h1>
+  <div>
+    <p>You have no contacts in your address book</address></p>
+  </div>
   <script src="./dist/bundle.js"></script>
 </body>
 
