Adds button to html
Adds feature click button in the test.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Contacts</h1>
+  <button class="add-contact">Add Contact</button>
   <div>
     <p>You have no contacts in your address book</address></p>
   </div>
