Adds new-contact-form to HTML
Adds local storage variable to app.js and contact storage test

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div>
     <p>You have no contacts in your address book</address></p>
   </div>
-  <form action="#">
+  <form action="#" class = "new-contact-form">
       <label for="name">Name</label>
       <input id="contact-name" name="name" type="text">
       <label for="email">Email</label>
