Adds renderContacts variable to app.js
Adds contact-list class to html.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <h1>Contacts</h1>
   <button class="add-contact">Add Contact</button>
-  <div>
-    <p>You have no contacts in your address book</address></p>
-  </div>
-  <form action="#" class = "new-contact-form">
+
+<div> class="contact-list">
+</div>
+  <form class="new-contact-form" action="#">
       <label for="name">Name</label>
       <input id="contact-name" name="name" type="text">
       <label for="email">Email</label>
@@ -28,7 +28,7 @@
       <label for="twitter">Twitter</label>
       <input id="contact-twitter" name="twitter" type="text">
       <input class="save-contact" type="submit" value="Save contact">
-    </form>
+  </form>
   <script src="./dist/bundle.js"></script>
 </body>
 
