Fixes error in html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Contacts</h1>
   <button class="add-contact">Add Contact</button>
 
-<div> class="contact-list">
+<div class="contact-list">
 </div>
   <form class="new-contact-form" action="#">
       <label for="name">Name</label>
