Adds stylesheet semantic UI

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+  <link rel="stylesheet" href="index.css">
   <title>Address book</title>
 </head>
 
 <body>
-  <h1>Contacts</h1>
-  <button class="add-contact">Add Contact</button>
+  <h1 class="ui block header">My Addressbook</h1>
+  <h2 class="container">Contacts</h2>
+
+  
+  
 
 <div class="contact-list">
 </div>
+<button class="add-contact">Add Contact</button>
   <form class="new-contact-form" action="#">
       <label for="name">Name</label>
       <input id="contact-name" name="name" type="text">
