Adds yellow button and items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="contact-list">
 </div>
-<button class="add-contact">Add Contact</button>
+<button class="add-contact ui yellow button">Add Contact</button>
   <form class="new-contact-form" action="#">
       <label for="name">Name</label>
       <input id="contact-name" name="name" type="text">
