--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
 <div class="contact-list" id="ui grid">
 </div>
-<button class="add-contact ui yellow button">Add Contact</button>
+<div class="inputform">
+<button class="add-contact ui black basic button">
+  <i class="icon user"></i>
+  Add Contact
+</button> 
+
+
   <form class="new-contact-form" action="#">
     <ul id="input_list">
       <li>
@@ -51,6 +57,7 @@
     </ul>
       <input class="save-contact ui yellow button" type="submit" value="Save contact">
   </form>
+  </div>
   <script src="./dist/bundle.js"></script>
 </body>
 
