Adds grid-container to display card horizontal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   
 
-<div class="contact-list" id="ui grid">
+<div class="contact-list">
 </div>
 <div class="inputform">
 <button class="add-contact ui black basic button">
