Adds delete button and require testing

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     </ul>
       <input class="save-contact ui yellow button" type="submit" value="Save contact">
   </form>
+  <button class="delete-contact ui black basic button">
+    <i class="icon user"></i>
+  Delete Contact
+  </button>
   </div>
   <script src="./dist/bundle.js"></script>
 </body>
